--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /Ecom/Ecom.api/Ecom.DataAccess/obj
 /Ecom/Ecom.api/Ecom.SharedLibrary/bin/Debug/net8.0
 /Ecom/Ecom.api/Ecom.SharedLibrary/obj
+/Ecom/Ecom/.vs/Ecom
+/Ecom/Ecom/Ecom.api/obj
+/Ecom/Ecom.api/.vs/ProjectEvaluation
