Impemented Lms Initial DB changes

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /Ecom/Ecom/.vs/Ecom
 /Ecom/Ecom/Ecom.api/obj
 /Ecom/Ecom.api/.vs/ProjectEvaluation
+/Ecom/Ecom/Ecom.api/bin/Debug/net8.0
+/Lms/.vs/Lms
+/Lms/Lms.Api/bin/Debug
+/Lms/Lms.Api/obj
