By Default redirect the Url to GraphQl

--- a/Lms/Lms.Api/appsettings.json
+++ b/Lms/Lms.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-MIB0F8M3;Database=Lms;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
