Forgot and reset passwords checked in

--- a/Lms/Lms.Api/appsettings.json
+++ b/Lms/Lms.Api/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-MIB0F8M3;Database=Lms;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
+  "SendGridKey": "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",
   "AllowedHosts": "*"
 }
